# disaster_relief_ai

./: .gitignore  README.md
backend/: .gitignore  app.py  evaluator_prompt.py  main.py  pyproject.toml  run_analysis.py
backend/src/image_analysis/: image_segmentation.py  mask_analysis.py  segmentation_model.py
backend/src/project_breakdown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/tools/: dashboard_tool.py  image_analysis_tool.py  web_search_tool.py
backend/utils/: utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DamageMap.tsx  Navigation.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/integrations/supabase/: client.ts  types.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  History.tsx  Index.tsx  Login.tsx  Signup.tsx  Upload.tsx
frontend/supabase/migrations/: 20250707215517-db3fbbe0-398c-4356-9616-59dd20ec6ace.sql
